# drogue-device-thermometer

./: Cargo.toml  rust-toolchain.toml
kicad/: pcb_stm32-cache.lib  pcb_stm32.kicad_pcb  pcb_stm32.pro  pcb_stm32.sch
src/: app.rs  data.rs  display.rs  main.rs  reader.rs
