[package]
authors = [
    "Jens Reimann <jreimann@redhat.com>"
]
edition = "2018"
name = "drogue-device-temp-probe"
version = "0.1.0"
resolver = "2"

[workspace]

[dependencies]

defmt = "0.2"
defmt-rtt = "0.2"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }

drogue-device = { git = "https://github.com/drogue-iot/drogue-device", branch = "main", default-features = false, features = ["defmt", "defmt-info", "wifi+esp8266"] }
cortex-m-rt = "0.6"
cortex-m = { version = "0.7", features = ["inline-asm"] }

embassy = { git = "https://github.com/drogue-iot/embassy.git", branch = "master", default-features = false, features=["defmt"] }
embassy-stm32 = { git = "https://github.com/drogue-iot/embassy.git", branch = "master", default-features = false, features = ["defmt", "stm32l432kc"] }

stm32l4 = { version = "0.13", features = ["stm32l4x2" ] }
stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4x2"] }

embedded-hal = { version = "0.2.4", features = ["unproven"] }

embedded-graphics = "0.7.1"
ssd1306 = "0.6.0"
display-interface = "0.4"

heapless = "0.7"
libm = "0.2"
memchr = { version = "2.4", default-features = false }

#embassy = {path = "../../../../../embassy/embassy", default-features = false}
#embassy-stm32 = {path = "../../../../../embassy/embassy-stm32", default-features = false, features = ["stm32l072cz"] }

[features]
display = []
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m.git", branch = "master", features = ["device"] }

[patch."https://github.com/drogue-iot/drogue-device"]
drogue-device = { path = "../drogue-device/device" }
[patch."https://github.com/drogue-iot/embassy"]
embassy = { path = "../embassy/embassy" }
embassy-stm32 = { path = "../embassy/embassy-stm32" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false
